feat(ui): update favicon and improve mobile menu functionality
- Replace favicon with BRANDMARK_01.png across all pages
- Add menu.js script to all pages for mobile menu functionality
- Implement scroll locking when mobile menu is open
- Update CSS for mobile menu positioning and behavior
- Fix Arabic navigation links and improve RTL styling
- Update hero project labels from "المشروع الرائد" to "المشروع الأبرز"

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,12 @@
       "use": "@vercel/static"
     }
   ],
+  "rewrites": [
+    {
+      "source": "/:path((?!en/).*)",
+      "destination": "/:path.html"
+    }
+  ],
   "headers": [
     {
       "source": "/images/(.*)",
