--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,10 @@
       "use": "@vercel/static"
     }
   ],
+  "outputDirectory": ".",
   "rewrites": [
     {
-      "source": "/:path((?!en/).*)",
+      "source": "/:path((?!en/|images/|css/|js/|fonts/|videos/|esign/).*)",
       "destination": "/:path.html"
     }
   ],
@@ -33,6 +34,12 @@
     },
     {
       "source": "/fonts/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/esign/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
